# purepass

./: .gitignore  CHANGELOG.md  README.md  db.sql  flake.nix  purepass.cabal
app/: Main.hs
resources/: words.json
src/: CLI.hs  Crypto.hs  PasswordGenerator.hs  TUI.hs  Vault.hs
tests/: VaultSpec.hs
