cabal-version:      3.0
name:               purepass
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-2.0-only
license-file:       LICENSE
author:             Kristian Nedrevold-Hansen
maintainer:         kristian@krined.no
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library purepass-lib
  hs-source-dirs: src
  exposed-modules:
    CLI,
    TUI,
    Vault,
    Crypto,
    PasswordGenerator
  build-depends:
    base ^>=4.18.2.0,
    containers,
    random,
    bytestring,
    memory,
    sandi,
    text,
    brick,
    vty >= 6.0,
    vty-unix,
    optparse-applicative ^>=0.18.1.0,
    sqlite-simple ^>= 0.4.19.0,
    crypton
  default-language: GHC2021

executable purepass
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    
      base ^>=4.18.2.0,
      sqlite-simple ^>= 0.4.19.0,
      purepass-lib
    hs-source-dirs:   app
    default-language: GHC2021

test-suite tests
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  default-language: GHC2021
  other-modules:
    VaultSpec
  build-depends:    
      base ^>=4.18.2.0,
      sqlite-simple ^>= 0.4.19.0,
      purepass-lib,
      hspec,
      hspec-discover
  ghc-options:
    -O -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:
    hspec-discover:hspec-discover


